nmro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nmro
  labels:
    name: nmro
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    name: nmro
